fix: bug do request, agora todas as paginas, html, css, js e imagem aparecem com GET feat: response builder feat: content.html, a pagina para fazermos upload e deletar arquivos
Co-authored-by: Renan Batista <rbatista@resutec.com.br>

--- a/content/index.html
+++ b/content/index.html
@@ -94,7 +94,6 @@
                     <div>
                       <h4>
                         Bem-vindo ao bom e velho
-
                       </h4>
                       <h1><b>
                         Megaupload
@@ -102,9 +101,9 @@
                       <p>
                         Baixe suas séries e filmes favoritos
                       </p>
-                      <div class="">
-                        <a href="">
-                          Contact us
+                      <div class="content">
+                        <a href="content.html">
+                          Experimente já!
                         </a>
                       </div>
                     </div>
@@ -119,7 +118,6 @@
                     <div>
                       <h4>
                         Bem-vindo ao bom e velho
-
                       </h4>
                       <h1><b>
                         Megaupload
@@ -127,9 +125,9 @@
                       <p>
                         Adquira gratuitamente os recentes jogos triple A
                       </p>
-                      <div class="">
-                        <a href="">
-                          Contact us
+                      <div class="content">
+                       	<a href="content.html">
+                        Experimente já!
                         </a>
                       </div>
                     </div>
@@ -150,14 +148,13 @@
                         Megaupload
                       </h1></b>
                       <p>
-                        Perca todos os seus dados com nossos Ransomares
+                        Perca todos os seus dados com nossos Ransomwares
                       </p>
-                      <div class="">
-                        <a href="">
-                          Contact us
+                      <div class="content">
+                       	<a href="content.html">
+                        Experimente já!
                         </a>
                       </div>
-                    </div>
                   </div>
                 </div>
               </div>
@@ -542,7 +539,7 @@
                 <img src="images/linkedin.png" alt="">
               </a>
               <a href="">
-                <img src="images/youtube.png" alt="">
+                <img src="images/megaupload.png" alt="">
               </a>
             </div>
           </div>
