--- a/content/content.html
+++ b/content/content.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Gerenciamento de Arquivos</h1>
         <!-- <form id="uploadForm" action="/upload" method="POST" enctype="multipart/form-data"> -->
-        <form id="uploadForm" action="/upload" method="GET">
+        <form id="uploadForm" action="/upload" method="POST" enctype="multipart/form-data">
             <input type="file" name="file" id="fileInput" required>
             <button type="submit">Upload</button>
         </form>
