Fix: CGI now works as root and accesses the file path Fix: Script current-time.py file Feat: New scripts - CGI Feat: Beta version of AutoIndex - needs defaultFilePath refactored and functional to work 100% Fix: Segmentation fault due to incorrect exception in Route Create and Server Create Feat: Added function checkAutoIndexinRoute, which analyzes every route of the server to check if the autoIndex flag is true or false. This needs to be replicated to other attributes of Route

--- a/content/index.html
+++ b/content/index.html
@@ -12,7 +12,8 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Esigned</title>
+  <title>Webserv - 42SP</title>
+  <link rel="icon" type="images/x-icon" href="favicon.ico"
 
   <!-- slider stylesheet -->
   <!-- slider stylesheet -->
@@ -37,7 +38,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
           <a class="navbar-brand" href="index.html">
             <span>
-              Esigned
+              42SP
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
