feat: timeout CGI feat: generic method to set Page Errors feat: added setPageErrors at points where we return in case of errors

--- a/content/page-errors/400.html
+++ b/content/page-errors/400.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - 403 error message</title>
+  <title>CodePen - 400 error message</title>
   <link rel="stylesheet" href="../css/error.css">
 
 </head>
@@ -12,11 +12,11 @@
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
-  <div class="message">You are not authorized.
+  <div class="message">Bad Request.
   </div>
-  <div class="message2">You tried to access a page you did not have prior authorization for.</div>
+  <div class="message2">The server could not understand your request due to invalid syntax. Please check your request and try againn.</div>
   <div class="container">
-    <div class="neon">403</div>
+    <div class="neon">301</div>
     <div class="door-frame">
       <div class="door">
         <div class="rectangle">
