--- a/content/page-errors/502.html
+++ b/content/page-errors/502.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - 502 error message</title>
-  <link rel="stylesheet" href="./css/error.css">
+  <link rel="stylesheet" href="../css/error.css">
 
 </head>
 <body>
