--- a/content/page-errors/301.html
+++ b/content/page-errors/301.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - 403 error message</title>
+  <title>CodePen - 301 error message</title>
   <link rel="stylesheet" href="../css/error.css">
 
 </head>
@@ -12,11 +12,11 @@
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
-  <div class="message">You are not authorized.
+  <div class="message">Moved Permanently.
   </div>
-  <div class="message2">You tried to access a page you did not have prior authorization for.</div>
+  <div class="message2">The requested resource has been permanently moved to a new location.</div>
   <div class="container">
-    <div class="neon">403</div>
+    <div class="neon">301</div>
     <div class="door-frame">
       <div class="door">
         <div class="rectangle">
