--- a/content/page-errors/unknown.html
+++ b/content/page-errors/unknown.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - 403 error message</title>
+  <title>CodePen - Unknown error message</title>
   <link rel="stylesheet" href="../css/error.css">
 
 </head>
@@ -12,11 +12,11 @@
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
-  <div class="message">You are not authorized.
+  <div class="message">Bro, wtf are you doing?
   </div>
-  <div class="message2">You tried to access a page you did not have prior authorization for.</div>
+  <div class="message2">Seriously? This is a custom error page just for you. Maybe try not breaking things next time?</div>
   <div class="container">
-    <div class="neon">403</div>
+    <div class="neon">301</div>
     <div class="door-frame">
       <div class="door">
         <div class="rectangle">
