Start server fix (#23)
* feat: Added new startServer function
fix: Fixed telnet hang issue
fix: unexpected behavior with multiple servers and requests

* fix: upload ok

* feat: page-erros
feat: readFile function

* feat: check methods - routes

* feat: timeout CGI
feat: generic method to set Page Errors
feat: added setPageErrors at points where we return in case of errors

* fix: if in callMethod

---------

Co-authored-by: Renato Crescenti <96125541+rscres@users.noreply.github.com>

--- a/content/page-errors/400.html
+++ b/content/page-errors/400.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - 400 error message</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../css/error.css">
 
 </head>
 <body>
@@ -14,9 +14,9 @@
 <body>
   <div class="message">Bad Request.
   </div>
-  <div class="message2">The server could not understand the request due to invalid syntax.</div>
+  <div class="message2">The server could not understand your request due to invalid syntax. Please check your request and try againn.</div>
   <div class="container">
-    <div class="neon">400</div>
+    <div class="neon">301</div>
     <div class="door-frame">
       <div class="door">
         <div class="rectangle">
