--- a/content/page-errors/502.html
+++ b/content/page-errors/502.html
@@ -2,8 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - 404 error message</title>
-  <link rel="stylesheet" href="./css/error.css">
+  <title>CodePen - 502 error message</title>
+  <link rel="stylesheet" href="../css/error.css">
 
 </head>
 <body>
