--- a/content/page-errors/unknown.html
+++ b/content/page-errors/unknown.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - 301 error message</title>
+  <title>CodePen - Unknown error message</title>
   <link rel="stylesheet" href="../css/error.css">
 
 </head>
@@ -12,9 +12,9 @@
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
-  <div class="message">Moved Permanently.
+  <div class="message">Bro, wtf are you doing?
   </div>
-  <div class="message2">The requested resource has been permanently moved to a new location.</div>
+  <div class="message2">Seriously? This is a custom error page just for you. Maybe try not breaking things next time?</div>
   <div class="container">
     <div class="neon">301</div>
     <div class="door-frame">
