--- a/content/page-errors/403.html
+++ b/content/page-errors/403.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - 403 error message</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../css/error.css">
 
 </head>
 <body>
