--- a/content/index.html
+++ b/content/index.html
@@ -392,18 +392,18 @@
           <div class="row">
             <div class="col-md-9 mx-auto">
               <div class="contact-form">
-                <form action="">
+                <form action="/cgi/simple_form.py" method="POST">
                   <div>
-                    <input type="text" placeholder="Full Name ">
+                    <input type="text" id="name" name="name" placeholder="Nome">
                   </div>
                   <div>
-                    <input type="text" placeholder="Phone Number">
+                    <input type="text" id="phone" name="phone" placeholder="Numero">
                   </div>
                   <div>
-                    <input type="email" placeholder="Email Address">
+                    <input type="text" id="email" name="email" placeholder="Email">
                   </div>
                   <div>
-                    <input type="text" placeholder="Message" class="input_message">
+                    <input type="text" id="message" name="message" placeholder="Mensagem" class="input_message">
                   </div>
                   <div class="d-flex justify-content-center">
                     <button type="submit" class="btn_on-hover">
