Post: nao passa pela rota certa

--- a/content/content.html
+++ b/content/content.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Gerenciamento de Arquivos</h1>
 
-        <form id="uploadForm" enctype="multipart/form-data" method="POST">
+		<form id="uploadForm" enctype="multipart/form-data" method="POST" action="/uploads">
             <input type="file" name="file" id="fileInput" required>
             <button type="submit">Upload</button>
         </form>
